<resources>
    <string name="app_name">TSPL</string>
    <string name="app_title">TSPL_V1.01.17.01</string>
    <string name="action_settings">Settings</string>
    <string name="logo_show_time">1500</string>
    <string name="activity_global_warning">Warning</string>
    <string name="activity_global_yes">Yes</string>
    <string name="activity_global_no">No</string>
    <string name="activity_global_print">Print</string>
    <string name="activity_global_align">Align:</string>
    <string name="activity_global_left_align">Left</string>
    <string name="activity_global_center_align">Center</string>
    <string name="activity_global_right_align">Right</string>
    <string name="activity_global_cmd_send">Printer code is sended.</string>
    <string name="activity_main_printer">Printer List:</string>
    <string name="activity_main_bt">Bluetooth</string>
    <string name="activity_main_wifi">WIFI</string>
    <string name="activity_main_usb">USB</string>
    <string name="activity_main_setting">Setting</string>
    <string name="activity_main_print_test_page">Print Test Page</string>
    <string name="activity_main_tips">Please connect to printer!</string>
    <string name="activity_main_scan_error">Scan Error!</string>
    <string name="activity_main_scan_success">Scan Success!</string>
    <string name="activity_main_connecterr">Connect Error!</string>
    <string name="activity_main_connected">Connect Success!</string>
    <string name="activity_main_disconnected">Print Disconnect!</string>
    <string name="activity_main_print_image_model">Print Model</string>
    <string name="activity_main_connect_usb_printer">Please connect usb printer.</string>
    <string name="activity_main_close">Setting </string>
    <string name="activity_main_originalsize">OriginalSize:</string>
    <string name="activity_main_minifront">MiniFront:</string>
    <string name="activity_main_heightsize">HeightSize:</string>
    <string name="activity_main_widthsize">WidthSize:</string>
    <string name="activity_main_heightwidthsize">HeightWidthSize:</string>
    <string name="activity_main_bold">Blod:</string>
    <string name="activity_main_underline">Underline:</string>
    <string-array name="activity_main_sample_2inch_receipt">
        <item>"   Xiamen Hanin Electronics\n"</item>
        <item>"     Technology Co., Ltd.\n"</item>
        <item>"\n"</item>
        <item>"Room 305A, Ang'ye Buliding\n"</item>
        <item>",Pioneering Park,Torch High-\n"</item>
        <item>"tech Zone, Xiamen,China\n"</item>
        <item>"TEL +86-(0)592-5885991\n"</item>
        <item>"                             C#2\n"</item>
        <item>"         2013-08-20\n"</item>
        <item>"MPT-II                   $333.00\n"</item>
        <item>"--------------------------------\n"</item>
        <item>"MPT-III                  $444.00\n"</item>
        <item>"--------------------------------\n"</item>
        <item>"LPQ58                    $555.00\n"</item>
        <item>"--------------------------------\n"</item>
        <item>"\n"</item>
        <item>"Before adding tax       $1332.00\n"</item>
        <item>"tax   5.0%                $66.60\n"</item>
        <item>"--------------------------------\n"</item>
        <item>"total                   $1398.60\n"</item>
        <item>"Customer's payment      $1400.00\n"</item>
        <item>"Change                     $1.40\n"</item>
    </string-array>
    <string-array name="activity_main_sample_3inch_receipt">
        <item>"           Xiamen Hanin Electronics\n"</item>
        <item>"             Technology Co., Ltd.\n"</item>
        <item>"\n"</item>
        <item>"Room 305A, Ang'ye Buliding\n"</item>
        <item>",Pioneering Park,Torch High-\n"</item>
        <item>"tech Zone, Xiamen,China\n"</item>
        <item>"TEL +86-(0)592-5885991\n"</item>
        <item>"                                             C#2\n"</item>
        <item>"                 2013-08-20\n"</item>
        <item>"MPT-II                                   $333.00\n"</item>
        <item>"------------------------------------------------\n"</item>
        <item>"MPT-III                                  $444.00\n"</item>
        <item>"------------------------------------------------\n"</item>
        <item>"LPQ58                                    $555.00\n"</item>
        <item>"------------------------------------------------\n"</item>
        <item>"\n"</item>
        <item>"Before adding tax                       $1332.00\n"</item>
        <item>"tax   5.0%                                $66.60\n"</item>
        <item>"------------------------------------------------\n"</item>
        <item>"total                                   $1398.60\n"</item>
        <item>"Customer's payment                      $1400.00\n"</item>
        <item>"Change                                     $1.40\n"</item>
    </string-array>
    <string name="activity_esc_function_btngetprinterstatus">Get Printer Status</string>
    <string name="activity_esc_function_btnopencashdrawer">Open Cash Drawer</string>
    <string name="activity_esc_function_btnsamplereceipt">Sample Receipt</string>
    <string name="activity_esc_function_btn1dbarcodes">1D Barcodes</string>
    <string name="activity_esc_function_btnqrcode">QR Code</string>
    <string name="activity_esc_function_btnpdf417">PDF417</string>
    <string name="activity_esc_function_btncut">Cut</string>
    <string name="activity_esc_function_btntextformatting">Text Formatting</string>
    <string name="activity_esc_function_btnprintimagefile">Print Image File</string>
    <string name="activity_esc_function_btnprintstatus">Get Print Status</string>
    <string name="activity_esc_function_btnprintprnfile">Print Binary File</string>
    <string name="activity_esc_function_btnpagemode">Page Mode</string>
    <string name="activity_esc_function_btnimagemanage">Manage NV Image</string>
    <string name="activity_esc_function_btngetremainingpower">Get Remaining Power</string>
    <string name="activity_esc_function_btnprintmodel">Print Model</string>
    <string name="activity_esc_function_btnprintblock">Print Block</string>
    <string name="activity_esc_function_btnprintpdf">Print PDF</string>
    <string name="activity_devicelist_title_paired_devices">Paired devices</string>
    <string name="activity_devicelist_title_other_devices">Other devices</string>
    <string name="activity_devicelist_button_scan">Scan bluetooth</string>
    <string name="activity_devicelist_none_paired">None paired Devices</string>
    <string name="activity_devicelist_scanning">Scanning......</string>
    <string name="activity_devicelist_select_device"> Devices list</string>
    <string name="activity_devicelist_connect">connect</string>
    <string name="activity_devicelist_get_device_err">Get Device Error:</string>
    <string name="activity_devicelist_bond_error">"Bond error!Please bond bluetooth printer in settings panel first."</string>
    <string name="activity_wifi_lblipaddress">IP Address:</string>
    <string name="activity_wifi_lblport">Port:</string>
    <string name="activity_wifi_btnconnect">Connect</string>
    <string name="activity_wifi_btncancel">Cancel</string>
    <string name="activity_wifi_ip">192.168.0.33</string>
    <string name="activity_wifi_port">9100</string>
    <string name="activity_wifi_noIP">Please import IP address</string>
    <string name="activity_setting_codepage">Codepage Setting:</string>
    <string name="activity_setting_cut">Cut Setting:</string>
    <string name="activity_setting_cashdrawer">Casedrawer Setting:</string>
    <string name="activity_setting_buzzer">Buzzer Setting:</string>
    <string name="activity_setting_feed">After print feeds:</string>
    <string name="activity_status_btnrefresh">Refresh</string>
    <string name="activity_status_error">Get printer status error.</string>
    <string name="activity_status_transmit_status_no_paper">No paper.</string>
    <string name="activity_status_transmit_status_has_paper">Has paper.</string>
    <string name="activity_status_real_time_status_paper_near_end">Paper is near end.</string>
    <string name="activity_status_real_time_status_paper_adquate">Adquate paper.</string>
    <string name="activity_status_real_time_status_cover_is_open">Cover is open.</string>
    <string name="activity_status_real_time_status_pressed_feed_button">Pressed Feed Button.</string>
    <string name="activity_status_real_time_status_stopped_no_paper">Stopped because no paper.</string>
    <string name="activity_status_real_time_status_has_error">Printer has error.</string>
    <string name="activity_status_real_time_status_cutter_error">Cutter error.</string>
    <string name="activity_status_real_time_status_unrecoverable_error">Unrecoverable error occurred.</string>
    <string name="activity_status_real_time_status_auto_recoverable_error">Automatically recoverable error.</string>
    <string name="activity_1dbarcodes_btnhelp">Help</string>
    <string name="activity_1dbarcodes_type">Barcode Type:</string>
    <string name="activity_1dbarcodes_data">Barcode Data:</string>
    <string name="activity_1dbarcodes_start_cd">The starting coordinates:</string>
    <string name="activity_1dbarcodes_readable">human readable:</string>
    <string name="activity_1dbarcodes_rotation">rotation:</string>
    <string name="activity_1dbarcodes_narrow">narrow:</string>
    <string name="activity_1dbarcodes_height">Barcode Height(1≤n≤255):</string>
    <string-array name="activity_1dbarcodes_width">
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
    </string-array>
    <string name="activity_1dbarcodes_no_data">Please import barcode data!</string>
    <string name="activity_1dbarcodes_data_error">import barcode data error！</string>
    <string name="activity_1dbarcodes_UPC_A">075678164125</string>
    <string name="activity_1dbarcodes_UPC_E">01227000009</string>
    <string name="activity_1dbarcodes_JAN13">6901028075831</string>
    <string name="activity_1dbarcodes_JAN8">04210009</string>
    <string name="activity_1dbarcodes_ITF">123456789012</string>
    <string name="activity_1dbarcodes_CODABAR">A40156B</string>
    <string name="activity_1dbarcodes_CODE93">TEST93</string>
    <string name="activity_1dbarcodes_CODE39">123456789</string>
    <string name="activity_1dbarcodes_CODE128">{BS/N:{C\014\042\070\116A</string>
    <string-array name="activity_1dbarcodes_barcode_type">
        <item>"128"</item>
        <item>"128M"</item>
        <item>"EAN128"</item>
        <item>"25"</item>
        <item>"25C"</item>
        <item>"39"</item>
        <item>"39C"</item>
        <item>"93"</item>
    </string-array>
    <string-array name="print_image_model">
        <item>"Normal Print(BlackWhite)"</item>
        <item>"Normal Print(Halftone)"</item>
        <item>"Compressed Print(BlackWhite)"</item>
        <item>"Compressed Print(Halftone)"</item>
    </string-array>
    <string-array name="activity_1dbarcodes_hri_position">
        <item>"not readable"</item>
        <item>"human readable"</item>
    </string-array>
    <string-array name="activity_1dbarcodes_hri_rotation">
        <item>"0"</item>
        <item>"90"</item>
        <item>"180"</item>
        <item>"270"</item>
    </string-array>
    <string name="activity_pdf417_dataColumns">dataColumns:</string>
    <string name="activity_pdf417_dataRows">dataRows:</string>
    <string name="activity_pdf417_moduleWidth">moduleWidth:</string>
    <string name="activity_pdf417_rowHeight">rowHeight:</string>
    <string name="activity_text_format_chkbold">Bold</string>
    <string name="activity_text_format_font">Font:</string>
    <string name="activity_text_format_codepage">CodePage:</string>
    <string name="activity_text_format_x_multiplication">Size:</string>
    <string name="activity_esc_function_btnprintpdf417">Print PDF417</string>
</resources>